--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,3 +16,43 @@
 .custom-scrollbar::-webkit-scrollbar-thumb:hover {
   background-color: #555;
 }
+/* Add this to your CSS file */
+.navigation-bar {
+  max-width: 100%;
+  overflow-x: auto;
+  white-space: nowrap;
+}
+.fixed-navigation-bar {
+  overflow-x: auto;
+  white-space: nowrap;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideIn {
+  from {
+    opacity: 0;
+    transform: translateX(-50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.animate-fade-in {
+  animation: fadeIn 0.8s ease-out;
+}
+
+.animate-slide-in {
+  animation: slideIn 0.8s ease-out;
+}
