--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,38 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  font-family: "Recursive", sans-serif;
+  font-weight: 400;
+  font-variation-settings: "slnt" 0, "CASL" 0, "CRSV" 0.5, "MONO" 0;
+  font-size: 0.875rem;
+}
+
+@layer base {
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 240 10% 3.9%;
+    --card: 0 0% 100%;
+    --card-foreground: 240 10% 3.9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 240 10% 3.9%;
+    --primary: 142.1 76.2% 36.3%;
+    --primary-foreground: 355.7 100% 97.3%;
+    --secondary: 240 4.8% 95.9%;
+    --secondary-foreground: 240 5.9% 10%;
+    --muted: 240 4.8% 95.9%;
+    --muted-foreground: 240 3.8% 46.1%;
+    --accent: 240 4.8% 95.9%;
+    --accent-foreground: 240 5.9% 10%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 240 5.9% 90%;
+    --input: 240 5.9% 90%;
+    --ring: 142.1 76.2% 36.3%;
+    --radius: 0.5rem;
+  }
+}
+
 .scrollbar-none::-webkit-scrollbar {
   display: none;
 }
@@ -16,7 +48,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #e5631d;
+  background: hsl(var(--primary));
   border-radius: 5px;
 }
 
