--- a/client/src/index.css
+++ b/client/src/index.css
@@ -52,6 +52,10 @@ body {
   border-radius: 5px;
 }
 
+.ql-editor {
+  font-size: 1.1rem !important;
+}
+
 @keyframes bounce-up-and-down {
   0%,
   100% {
